--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <div><a href="mail_info@devstudio.com">info@devstudio.com</a></div>
-      <div><a href="tel:+1 212-772-4150">+1 212-772-4150</a></div>
+      <div><a href="tel:+1212-772-4150">+1 212-772-4150</a></div>
     </header>
     <!--Pagina web-->
     <main>
@@ -105,7 +105,7 @@
       <a href="#"><img src="./img/logo_text.svg" alt="logo" /></a>
       <p>695 Park Ave, NY 10065, USA</p>
       <div><a href="mail_info@devstudio.com">info@devstudio.com</a></div>
-      <div><a href="tel:+1 212-772-4150">+1 212-772-4150</a></div>
+      <div><a href="tel:+1212-772-4150">+1 212-772-4150</a></div>
     </footer>
   </body>
 </html>
