--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Header section-->
     <header>
       <div>
-        <a href="#"><img src="./img/logo_text.svg" alt="logo" /></a>
+        <a href="#"><h1>WebStudio</h1></a>
       </div>
       <nav>
         <ul>
@@ -69,32 +69,32 @@
         <h2>What we do</h2>
         <!--div cu imagini-->
         <div>
-          <img src="img/img_pca.jpg" alt="pca" width="350" />
-          <img src="img/img_pcb.jpg" alt="pcb" width="350" />
-          <img src="img/img_pcc.jpg" alt="pcc" width="350" />
+          <img src="img/img_pca.jpg" alt="pca" width="325" />
+          <img src="img/img_pcb.jpg" alt="pcb" width="325" />
+          <img src="img/img_pcc.jpg" alt="pcc" width="325" />
         </div>
       </section>
       <!--Team work-->
       <section>
         <h2>Our Team</h2>
-        <div style="display: flex;"">
+        <div style="display: flex">
           <div>
-            <img src="img/img_t1.jpg" alt="CW" />
+            <img src="img/img_t1.jpg" alt="Christopher Walker" width="250" />
             <p><b>Christopher Walker</b></p>
             <p>Product Designer</p>
           </div>
           <div>
-            <img src="img/img_t2.jpg" alt="KE" />
+            <img src="img/img_t2.jpg" alt="Kylie Evans" width="250" />
             <p><b>Kylie Evans</b></p>
             <p>Frontend Developer</p>
           </div>
           <div>
-            <img src="img/img_t3.jpg" alt="RH" />
+            <img src="img/img_t3.jpg" alt="Ryan Harris" width="250" />
             <p><b>Ryan Harris</b></p>
             <p>Marketing</p>
           </div>
           <div>
-            <img src="img/img_t4.jpg" alt="TM" />
+            <img src="img/img_t4.jpg" alt="Tyler Moore" width="250" />
             <p><b>Tyler Moore</b></p>
             <p>UI Designer</p>
           </div>
@@ -102,8 +102,8 @@
       </section>
     </main>
     <footer>
-      <a href="#"><img src="./img/logo_text.svg" alt="logo" /></a>
-      <p>695 Park Ave, NY 10065, USA</p>
+      <a href="#"><h1>WebStudio</h1></a>
+      <address>695 Park Ave, NY 10065, USA</address>
       <div><a href="mail_info@devstudio.com">info@devstudio.com</a></div>
       <div><a href="tel:+1212-772-4150">+1 212-772-4150</a></div>
     </footer>
