--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <!--Hero section-->
       <section>
         <h2>EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h2>
-        <button>
+        <button type="submit">
           <h4>Request our service</h4>
         </button>
       </section>
@@ -69,9 +69,9 @@
         <h2>What we do</h2>
         <!--div cu imagini-->
         <div>
-          <img src="img/img_pca.jpg" alt="pca" width="325" />
-          <img src="img/img_pcb.jpg" alt="pcb" width="325" />
-          <img src="img/img_pcc.jpg" alt="pcc" width="325" />
+          <img src="img/img_pca.jpg" alt="editing cod" width="325" />
+          <img src="img/img_pcb.jpg" alt="optimizare mobile" width="325" />
+          <img src="img/img_pcc.jpg" alt="alegere culoare" width="325" />
         </div>
       </section>
       <!--Team work-->
